修正：API_BASE_URL 格式

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -479,11 +479,12 @@
     </div>
 
     <script>
-        // Configuration const \const API_BASE_URL = 
-        'https://booking-ub69.onrender.com/api'; const WHATSAPP_NUMBER = 
-        '85298725268'; const EMAIL = 'connectpoint@atsumaru.com'; const 
-        PRICE_PER_HOUR = 280; const PRICE_PER_30MIN = 140; const 
-        SUNDAY_AIRCON_FEE = 80;
+        // Configuration const \const API_BASE_URL ='https://booking-ub69.onrender.com/api';
+        const WHATSAPP_NUMBER = '85298725268';
+        const EMAIL = 'connectpoint@atsumaru.com';
+        const PRICE_PER_HOUR = 280; 
+        const PRICE_PER_30MIN = 140;
+        const SUNDAY_AIRCON_FEE = 80;
 
         let selectedDuration = 60; // Default 1 hour
         let selectedSlots = [];
