修正：API_BASE_URL 語法錯誤

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -479,7 +479,7 @@
     </div>
 
     <script>
-        // Configuration const \const API_BASE_URL ='https://booking-ub69.onrender.com/api';
+        const API_BASE_URL = 'https://booking-ub69.onrender.com/api';
         const WHATSAPP_NUMBER = '85298725268';
         const EMAIL = 'connectpoint@atsumaru.com';
         const PRICE_PER_HOUR = 280; 
