--- a/admin/index.html
+++ b/admin/index.html
@@ -307,7 +307,7 @@
     </div>
 
     <script>
-        const API_BASE_URL = 'http://localhost:3000/api';
+        const API_BASE_URL = 'https://booking-ub69.onrender.com/api';
         let allBookings = [];
 
         // Load bookings on page load
