更新：加入中英文切換和橙色主題

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,8 +17,9 @@
             <button onclick="setLanguage('en')" style="padding: 10px 20px; background: white; border: 1px solid #ccc; cursor: pointer;">English</button>
             <button onclick="setLanguage('zh')" style="padding: 10px 20px; background: white; border: 1px solid #ccc; cursor: pointer;">中文</button>
             </div>
+            body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #ff6b35 0%, #f77b00 100%);
             padding: 20px;
             min-height: 100vh;
         }
@@ -39,11 +40,13 @@
             text-align: center;
         }
 
-        .header h1 {
-            font-size: 2em;
-            margin-bottom: 10px;
+        h1 {
+        color: #ff6b35;
         }
 
+        .section-title {
+        color: #ff6b35;        }
+        }
         .header p {
             opacity: 0.9;
             font-size: 1.1em;
